--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@angular/platform-browser": "2.3.1",
     "@angular/platform-browser-dynamic": "2.3.1",
     "@angular/router": "3.3.1",
+    "ng2-material": "0.8.1",
+    "@angular2-material/core": "2.0.0-alpha.8-2",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-rc.4",
